--- a/product-details.html
+++ b/product-details.html
@@ -656,8 +656,13 @@
         </div>
         <!--/.cart-actions-->
 
-        <div class="clear"></div>
+        <div class="clearfix"></div>
 
+
+
+    </div><!--/ right column end -->
+
+    <div class="col-lg-12 ">
         <div class="product-tab w100 clearfix">
 
             <ul class="nav nav-tabs">
@@ -717,7 +722,7 @@
 
         </div><!--/.product-tab-->
 
-        <div style="clear:both"></div>
+        <div class="clearfix"></div>
 
         <div class="product-share clearfix">
             <p> SHARE </p>
@@ -728,9 +733,7 @@
                 <a href="#"> <i  class="fa fa-pinterest"></i></a> </div>
         </div>
         <!--/.product-share-->
-
-    </div><!--/ right column end -->
-
+    </div>
 </div>
 <!--/.row-->
 
