--- a/product-details.html
+++ b/product-details.html
@@ -582,7 +582,9 @@
 
     <!-- left column -->
     <div class="col-lg-6 col-md-6 col-sm-6">
-        <div class="customImage"></div>
+        <div class="customImage">
+            <img src="images/greyBgImage.jpg" alt="">
+        </div>
         <!-- product Image and Zoom -->
         <!--<div class="main-image sp-wrap col-lg-12 no-padding">
             <a href="images/zoom/zoom1hi.jpg"><img src="images/zoom/zoom1.jpg" class="img-responsive" alt="img"></a>
